# jato

./: .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  Doxyfile  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.cafebabe  README.jamvm  README.md  TODO  aclocal.m4  config.status  configure  configure.ac  jato.c  main.c  mkinstalldirs
Documentation/: CodingStyle  debugging.txt  heap-profiling.txt  internals.txt  jit-compiler-design.txt  jvm-insn-support  options.txt
acceptance/: .project  README  TODO  run-acceptance-tests.sh
boehmgc/: .gitignore  Makefile  os_dep.c
cafebabe/: CMakeLists.txt  Doxyfile  annotations_attribute.c  attribute_array.c  attribute_info.c  class.c  code_attribute.c  constant_pool.c  constant_value_attribute.c  enclosing_method_attribute.c  error.c  exceptions_attribute.c  field_info.c  inner_classes_attribute.c  line_number_table_attribute.c  method_info.c  source_file_attribute.c  stack_map_table_attribute.c  stream.c
jamvm/: access.c  alloc.c  alloc.h  cast.c  class.c  class.h  config.h.in  direct.c  dll.c  dll_ffi.c  excep.c  execute.c  frame.c  frame.h  hash.c  hash.h  hooks.c  init.c  interp-direct.h  interp-indirect.h  interp.c  interp.h  jam.c  jam.h  jni.c  jni.h  lock.c  lock.h  natives.c  natives.h  properties.c  reflect.c  resolve.c  sig.h  string.c  thread.c  thread.h  utf8.c  zip.c  zip.h
jato/: Makefile  jato.c
jit/: LICENSE  Makefile  README  TODO  abc-removal.c  alloc.c  alloc.h  args.c  arithmetic-bc.c  assembler-test.c  assembler.c  assembler.h  basic-block-assert.h  basic-block-test.c  basic-block.c  basic-block.h  bc-offset-mapping.c  bitmap.c  branch-bc.c  bytecode-arithmetic-converters.c  bytecode-arithmetic-converters.h  bytecode-cfg-builder-test.c  bytecode-cfg-builder.c  bytecode-converter-fixture.c  bytecode-converter-fixture.h  bytecode-to-ir-test.c  bytecode-to-ir.c  bytecodes-test.c  bytecodes.c  bytecodes.h  cfg-analyzer.c  clobber.c  compilation-unit-test.c  compilation-unit.c  compilation-unit.h  compiler.c  constant-pool.c  cu-mapping.c  dce.c  disass-common.c  (+62 more)
lib/: Makefile  Makefile.am  Makefile.in  arena.c  array.c  bitset.c  buffer.c  compile-lock.c  guard-page.c  hash-map.c  list.c  options.c  parse.c  pqueue.c  radix-tree.c  stack.c  string.c  symbol.c  zip.c
lib/gnu/: Makefile  Makefile.am  Makefile.in
lib/gnu/classpath/: Makefile  Makefile.am  Makefile.in  VMStackWalker.java
lib/jamvm/: Makefile  Makefile.am  Makefile.in
lib/jamvm/java/: Makefile  Makefile.am  Makefile.in
lib/jamvm/java/lang/: JarLauncher.java  Makefile  Makefile.am  Makefile.in
lib/java/: Makefile  Makefile.am  Makefile.in
lib/java/lang/: Makefile  Makefile.am  Makefile.in  VMClassLoader.java  VMRuntime.java  VMThread.java
lib/java/lang/reflect/: Constructor.java  Field.java  Makefile  Makefile.am  Makefile.in  Method.java
lib/java/security/: Makefile  Makefile.am  Makefile.in  VMAccessController.java
lib/sun/reflect/annotation/: AnnotationInvocationHandler.java
monoburg/: Makefile
regression/: Makefile  run-suite.sh
runtime/: class.c  classloader.c  gnu_java_lang_management_VMThreadMXBeanImpl.c  java_lang_VMClass.c  java_lang_VMClassLoader.c  java_lang_VMRuntime.c  java_lang_VMString.c  java_lang_VMSystem.c  java_lang_VMThread.c  java_lang_reflect_VMField.c  java_lang_reflect_VMMethod.c  reflection.c  runtime.c  stack-walker.c  sun_misc_Unsafe.c  unsafe.c
scripts/: Makefile.clean  Makefile.compile  Makefile.include  common.mk  doqa  ecj-jato  gcc-arch.sh  gcc-has-lib.sh  gen-opcodes.pl  java  make-release
src/: Makefile  Makefile.am  Makefile.in  access.c  alloc.c  alloc.h  attribute_info.c  cast.c  class.c  constant_pool.c  direct.c  dll.c  dll_ffi.c  dump.c  error.c  excep.c  execute.c  field_info.c  frame.c  frame.h  hash.c  hash.h  interp-direct.h  interp-indirect.h  interp.c  interp.h  jam.c  jam.h  java.c  jni.c  jni.h  lock.c  lock.h  method_info.c  natives.c  natives.h  properties.c  reflect.c  resolve.c  sig.h  (+7 more)
src/.deps/: alloc.Po  cast.Po  class.Po  direct.Po  dll.Po  excep.Po  execute.Po  hash.Po  interp.Po  jam.Po  jni.Po  lock.Po  natives.Po  properties.Po  reflect.Po  resolve.Po  string.Po  thread.Po  utf8.Po  zip.Po
src/arch/: Makefile  Makefile.am  Makefile.in  arm.h  i386.h  powerpc.h  x86_64.h
src/cafebabe/: attribute_array.c  attribute_info.c  class.c  code_attribute.c  constant_pool.c  field_info.c  line_number_table_attribute.c  method_info.c  source_file_attribute.c  stream.c
src/jit/: CuTest.c  CuTest.h  Makefile  README  TODO  backtrace.c  backtrace.h  basic-block-assert.h  basic-block-test.c  basic-block.c  basic-block.h  bitmap-test.c  bitmap.c  bytecode-cfg-builder-test.c  bytecode-cfg-builder.c  bytecode-conv-test.c  bytecode-conv.c  bytecode-to-ir-test.c  bytecode-to-ir.c  bytecodes-test.c  bytecodes.c  bytecodes.h  byteorder.h  compilation-unit.c  compilation-unit.h  constant.h  expression.c  expression.h  insn-selector-test.c  insn-selector.brg  insn-selector.h  instruction.c  instruction.h  jit-compiler.h  jvm_types.h  libharness.c  libharness.h  list-test.c  list.h  local-variable.h  (+10 more)
src/os/: Makefile  Makefile.am  Makefile.in
src/os/bsd/powerpc/: callNative.S
src/os/bsd/x86_64/: init.c
src/os/darwin/: Makefile  Makefile.am  Makefile.in  dll_os.c  os.c
src/os/darwin/i386/: init.c
src/os/darwin/powerpc/: Makefile  Makefile.am  Makefile.in  callNative.S  callNative.s  callNative32.inc  callNative64.inc  dll_md.c
src/os/linux/: Makefile  Makefile.am  Makefile.in  dll_os.c
src/os/linux/arm/: Makefile  Makefile.am  Makefile.in  callNative.S  dll_md.c  init.c
src/os/linux/i386/: Makefile  Makefile.am  Makefile.in  dll_md.c  init.c
src/os/linux/i386/.deps/: dll_md.Po  init.Po
src/os/linux/powerpc/: Makefile  Makefile.am  Makefile.in  callNative.S  callNative.s  dll_md.c  init.c
src/os/linux/x86_64/: Makefile.am  Makefile.in  init.c
tools/: classpath-config.c  ecj  test.py
torture/: Makefile  README  clojure-torture  junit-torture  scimark-torture  torture
vm/: Makefile  annotation.c  call.c  (+46 more)
(+747 files in other folders)
